# opentelemetry-rust

./: .gitmodules  Cargo.toml
examples/tracing-otel/: .env  Cargo.toml  README.md  config.yml
examples/tracing-otel/src/: main.rs
opentelemetry-appender-tracing/: Cargo.toml
opentelemetry-appender-tracing/src/: layer.rs
opentelemetry-sdk/src/logs/: log_emitter.rs  mod.rs  record.rs
opentelemetry-sdk/src/metrics/: mod.rs
opentelemetry/src/logs/: noop.rs  record.rs
opentelemetry/src/trace/: mod.rs  span_context.rs
